# BOTO_ED

./: README.md
boto_test/: .env  Dockerfile  boto.db  conf.py  main.py  pyproject.toml  setup.py  test.db
boto_test/database/: models.py
boto_test/routers/: routers.py
boto_test/schemas/: schemas.py
boto_test/static/: main.html
boto_test/tests/: test_boto.py
