[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boto-shortener"
version = "0.1.0"
description = "Тестовое задание: Boto"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "python-dotenv",
    "pytest",
    "httpx",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
